# geometry

./: CMakeLists.txt  main.c  shapes.c  vector3d.c
include/: draw.h  draw_helper.h  shapes.h  vectors.h
src/: draw.c  draw_helper.c  main.c  shapes.c  vectors.c
